PIRANHA-3394 'Start New KVM Container' button is shifted right on KVM-Docker tile if 'cAdvisor' container is stopped

--- a/site/modules/docker/static/css/main.css
+++ b/site/modules/docker/static/css/main.css
@@ -73,7 +73,6 @@
     font-size: 14px;
 }
 .btn-wrapper {
-    float: left;
     margin: 20px 0 0 15px;
 }
 .left-part
